Outdated and now unnecessary module configuration removed