@@ -14,8 +14,6 @@ dependencies {
 
 applicationDefaultJvmArgs = [
         "-Xmx128m",
-        //add-reads for accessing default methods for Entity types
-        "--add-reads", "is.codion.framework.domain=is.codion.framework.demos.world.domain.api",
         "-Dcodion.client.connectionType=local",
         "-Dcodion.db.url=jdbc:h2:mem:h2db",
         "-Dcodion.db.initScripts=classpath:create_schema.sql",
