@@ -10,8 +10,6 @@ dependencies {
 
 applicationDefaultJvmArgs = [
         "-Xmx128m",
-        //add-reads for accessing default methods for Entity types
-        "--add-reads", "is.codion.framework.domain=is.codion.framework.demos.world.domain.api",
         "-Dcodion.client.connectionType=remote",
         "-Dcodion.server.hostname=${serverHost}",
         "-Dcodion.server.registryPort=${serverRegistryPort}",
